Scales: Fix size and contrast in dark style

--- a/src/widgets/_scales.scss
+++ b/src/widgets/_scales.scss
@@ -4,10 +4,21 @@ scale {
     }
 
     highlight {
-        background-color: rgba(black, 0.45);
+        background-color: rgba($fg-color, 0.7);
+
+        box-shadow:
+            inset 0 0 0 1px rgba(black, 0.3),
+            inset 0 0 0 2px rgba(black, 0.03);
+
+        @if $color-scheme == "dark" {
+            background-clip: padding-box;
+            border: 1px solid transparent;
+            box-shadow: inset 0 1px 0 #{'@highlight_color'};
+        }
 
         &:disabled {
-            background-color: rgba(black, 0.25);
+            background-color: rgba($fg-color, 0.25);
+            box-shadow: none;
         }
     }
 
@@ -50,6 +61,11 @@ scale {
             0 1px 0 0 #{'alpha(@highlight_color, 0.3)'};
         min-height: rem(3px);
         min-width: rem(3px);
+
+        @if $color-scheme == "dark" {
+            min-height: rem(5px);
+            min-width: rem(5px);
+        }
 
         &:disabled {
             background-image: none;
@@ -131,13 +147,15 @@ scale {
         highlight.top,
         fill.top {
             border-radius: rem(12px) 0 0 rem(12px);
-            margin: 0 0 0 rem(-6px);
+            // Off by one
+            margin: 0 0 0 rem(-7px);
         }
 
         highlight.bottom,
         fill.bottom {
             border-radius: 0 rem(12px) rem(12px) 0;
-            margin: 0 rem(-6px) 0 0;
+            // Off by one
+            margin: 0 rem(-7px) 0 0;
         }
 
         mark indicator {
@@ -160,13 +178,15 @@ scale {
         highlight.top,
         fill.top {
             border-radius: rem(12px) rem(12px) 0 0;
-            margin: rem(-6px) 0 0;
+            // Off by one
+            margin: rem(-7px) 0 0;
         }
 
         highlight.bottom,
         fill.bottom {
             border-radius: 0 0 rem(12px) rem(12px);
-            margin: 0 0 rem(-6px);
+            // Off by one
+            margin: 0 0 rem(-7px);
         }
 
         mark indicator {
